# triage_agent

./: .env.example  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  HANDOFF.md  README.md  mcp_server.py  pyproject.toml  scout.py  setup.py  start_workflow.py  triage.py  triage_all.py  worker.py
.claude/commands/: add-check-plugin.md  add-detection.md
.claude/projects/-Users-webchick-triage-agent/memory/: MEMORY.md  project_temporal_sdks.md
.github/: dependency-scout.yml.example  triage-agent.yml.example
.github/workflows/: ci.yml
activities/: README.md  attestation.py  classifier.py  depsdev.py  github.py  maintainer.py  metadata.py  models.py  osv.py  package_diff.py  platform_activities.py  pypi_metadata.py  release_age.py  release_notes.py  repo_config.py  scorecard.py  socket.py  version_lineage.py
activities/ecosystems/: __init__.py  cargo.py  composer.py  gomod.py  maven.py  npm.py  nuget.py  pip.py  remote.py  rubygems.py
activities/forge/: __init__.py
activities/platform/: __init__.py  github.py  gitlab.py
api/: webhook.py
checks/: README.md  package_diff.py  security_advisories.py
checks/signatures/: __init__.py  file_types.yaml  obfuscation.yaml
classifiers/: README.md  __init__.py  _helpers.py  anthropic.py  ollama.py  openai.py
detections/: net_calls.yaml  persistence.yaml
docs/: architecture.md  contributing.md  deployment.md  extending.md  security.md
ecosystems/: README.md  __init__.py  cargo.py  composer.py  gomod.py  maven.py  npm.py  nuget.py  pip.py  remote.py  rubygems.py
helpers/: bot_parsers.py  cache.py  comment_formatter.py  config_provider.py  display.py  github_app.py  http.py  notification.py  pr_parser.py  prompts.py
models/: README.md  __init__.py  checks.py  package.py  pr.py  verdict.py
pr_actions/: README.md  platform.py
tests/: conftest.py  generate_fixtures.py  helpers.py  test_activities.py  test_activity_check_plugins.py  test_attestation.py  test_cargo.py  test_check_wiring.py  test_classifier.py  test_comment_formatter.py  test_composer.py  test_depsdev_scorecard.py  test_detections.py  test_ecosystems_utils.py  test_github.py  test_github_app.py  test_gitlab.py  test_gomod.py  test_maven.py  test_nuget.py  test_package_diff.py  test_package_diff_extended.py  test_pr_parser.py  test_release_notes.py  test_remote_provider.py  test_repo_config.py  test_signal_wiring.py  test_signature_plugins.py  test_signatures.py  test_socket.py  test_version_lineage.py  test_webhook.py  test_workflow_replay.py
tests/fixtures/: pr_action_green_automerge.json  pr_action_observe_only.json  pr_action_red_blocked.json  pr_action_yellow_human_approved.json  pr_action_yellow_human_rejected.json
workflows/: package_triage_workflow.py  pr_action_workflow.py
