[project]
name = "dependency-scout"
version = "0.1.0"
description = "Supply chain risk analysis for Dependabot and Renovate PRs, built on Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.12.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.5.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.entry-points."dependency_scout.classifiers"]
claude = "activities.classifier:ClaudeClassifier"
openai = "activities.classifier:OpenAIClassifier"
ollama = "activities.classifier:OllamaClassifier"
rule_based = "activities.classifier:RuleBasedClassifier"

[project.entry-points."dependency_scout.ecosystems"]
# Built-in providers are discovered via file scan in activities/ecosystems/__init__.py.
# Third-party providers register here.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activities", "workflows", "helpers", "api"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
