[project]
name = "dependency-scout"
version = "0.1.0"
description = "Supply chain risk analysis for Dependabot and Renovate PRs, built on Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.12.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.5.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "mcp>=1.0",
]

[project.scripts]
scout = "scout:main"

[project.entry-points."dependency_scout.classifiers"]
claude = "classifiers:ClaudeClassifier"
openai = "classifiers:OpenAIClassifier"
ollama = "classifiers:OllamaClassifier"
rule_based = "classifiers:RuleBasedClassifier"

[project.entry-points."dependency_scout.ecosystems"]
# Built-in providers are discovered via file scan in ecosystems/__init__.py.
# Third-party providers register here.

[project.entry-points."dependency_scout.platforms"]
# Built-in clients are registered here so get_platform_client() is a uniform entry-point
# lookup. Third-party platforms (Gitea, Bitbucket, …) register their own factory here:
#   myplatform = "my_package.platform:create_client"
# The factory must accept (pr: PRContext) and return a PlatformClient.
github = "platforms.github:create_client"
gitlab = "platforms.gitlab:create_client"

[project.entry-points."dependency_scout.checks"]
# Custom supply-chain checks. Each entry point must point to an async function with signature:
#   async def run(ctx: CheckContext) -> dict
# where CheckContext is importable from models (i.e. `from models import CheckContext`).
# The function's return value is merged into PackageChecks.custom_checks under the entry-point name.
# Example in your plugin's pyproject.toml:
#   [project.entry-points."dependency_scout.checks"]
#   internal_vuln = "my_package.vuln_check:run"

[project.entry-points."dependency_scout.activity_checks"]
# Advanced supply-chain checks that need full Temporal control: heartbeating (for long-running
# downloads or corpus scans), custom retry policies, or activity-level cancellation.
# Each entry point must point to an @activity.defn-decorated callable with signature:
#   @activity.defn(name="my_company.deep_scan")
#   async def deep_scan(ctx: CheckContext) -> dict: ...
# The activity name string (from @activity.defn) is what goes in extra_check_activities in
# .github/dependency-scout.yml. The function is auto-registered with the worker at startup.
# Unlike dependency_scout.checks, a misconfigured entry point here is treated as a bug
# (logged as WARNING and skipped). Use dependency_scout.checks for plain async functions.
# Example in your plugin's pyproject.toml:
#   [project.entry-points."dependency_scout.activity_checks"]
#   deep_scan = "my_package.activities:deep_archive_scan"
# In .github/dependency-scout.yml:
#   extra_check_activities:
#     - my_company.deep_archive_scan

[project.entry-points."dependency_scout.signatures"]
# YAML-based attack signature directories. Each entry point must point to a callable
# that returns a pathlib.Path to a directory containing any of: net_calls.yaml,
# obfuscation.yaml, persistence.yaml, file_types.yaml — same format as checks/signatures/.
# Patterns are merged into the built-in sets at import time.
# Example in your plugin's pyproject.toml:
#   [project.entry-points."dependency_scout.signatures"]
#   my_sigs = "my_package.signatures:get_signatures_dir"
# Where get_signatures_dir() returns Path(__file__).parent / "sigs".

[project.entry-points."dependency_scout.signature_providers"]
# Advanced: Python callables returning a SignatureContribution for dynamically generated
# or programmatically constructed patterns (e.g. fetched from a threat-intel feed).
# Each entry point must point to a callable returning a SignatureContribution instance.
#   from checks.signatures import SignatureContribution
#   def get_signatures() -> SignatureContribution:
#       return SignatureContribution(net_call_patterns={".py": [r"evil_sdk\.call\b"]})
# Example in your plugin's pyproject.toml:
#   [project.entry-points."dependency_scout.signature_providers"]
#   threat_intel = "my_package.intel:get_signatures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activities", "checks", "ecosystems", "platforms", "classifiers", "models", "workflows", "helpers", "api"]
include = ["scout.py", "mcp_server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
